--- a/config/environment_modes/default.yaml
+++ b/config/environment_modes/default.yaml
@@ -98,17 +98,17 @@ globally_excluded_scenes: [] # List of scene names to exclude for all tasks(e.g.
 tasks:
   - type: PlaceIn
     args:
-      placed_object_type: [PICKUPABLES] # Sim object type or sim object group (e.g. "PICKUPABLES", "RECEPTACLES", "Apple", "Bowl")
-      receptacle_type: [RECEPTACLES]
+      placed_object_type: [_PICKUPABLES] # Sim object type or sim object group (e.g. "PICKUPABLES", "RECEPTACLES", "Apple", "Bowl")
+      receptacle_type: [_RECEPTACLES]
     scenes: [Kitchen, LivingRoom, Bedroom, Bathroom] # List of scene names to use for the task (e.g. scene groups like "Kitchen", "LivingRoom", "Bedroom", "Bathroom" or full names like "FloorPlan1", "FloorPlan201", ...)
   - type: PlaceSameTwoIn
     args:
-      placed_object_type: [PICKUPABLES]
-      receptacle_type: [RECEPTACLES]
+      placed_object_type: [_PICKUPABLES]
+      receptacle_type: [_RECEPTACLES]
     scenes: [Kitchen, LivingRoom, Bedroom, Bathroom]
   - type: PlaceWithMoveableRecepIn
     args:
-      placed_object_type: [PICKUPABLES]
-      pickupable_receptacle_type: [PICKUPABLE_RECEPTACLES]
-      receptacle_type: [RECEPTACLES]
+      placed_object_type: [_PICKUPABLES]
+      pickupable_receptacle_type: [_PICKUPABLE_RECEPTACLES]
+      receptacle_type: [_RECEPTACLES]
     scenes: [Kitchen, LivingRoom, Bedroom, Bathroom]
