Add agents and callbacks modules

--- a/config/environment_modes/default.yaml
+++ b/config/environment_modes/default.yaml
@@ -100,15 +100,15 @@ tasks:
     args:
       placed_object_type: [_PICKUPABLES] # Sim object type or sim object group (e.g. "PICKUPABLES", "RECEPTACLES", "Apple", "Bowl")
       receptacle_type: [_RECEPTACLES]
-    scenes: [Kitchen, LivingRoom, Bedroom, Bathroom] # List of scene names to use for the task (e.g. scene groups like "Kitchen", "LivingRoom", "Bedroom", "Bathroom" or full names like "FloorPlan1", "FloorPlan201", ...)
+    scenes: &ALL_SCENES [Kitchen, LivingRoom, Bedroom, Bathroom] # List of scene names to use for the task (e.g. scene groups like "Kitchen", "LivingRoom", "Bedroom", "Bathroom" or full names like "FloorPlan1", "FloorPlan201", ...)
   - type: PlaceSameTwoIn
     args:
       placed_object_type: [_PICKUPABLES]
       receptacle_type: [_RECEPTACLES]
-    scenes: [Kitchen, LivingRoom, Bedroom, Bathroom]
+    scenes: *ALL_SCENES
   - type: PlaceWithMoveableRecepIn
     args:
       placed_object_type: [_PICKUPABLES]
       pickupable_receptacle_type: [_PICKUPABLE_RECEPTACLES]
       receptacle_type: [_RECEPTACLES]
-    scenes: [Kitchen, LivingRoom, Bedroom, Bathroom]
+    scenes: *ALL_SCENES
