--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,6 +44,13 @@ jobs:
           python -m pytest -v -rA --doctest-modules --cov=.
         continue-on-error: true
 
+      # TODO: Make the output more readable
+      - name: Test with pytest 🧪
+        run: |
+          pip install pytest pytest-cov
+          python -m pytest -v -rA --cov=.
+        continue-on-error: true
+
       - name: Upload coverage to Codecov 📊
         uses: codecov/codecov-action@v4
         with:
