--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -45,7 +45,21 @@ jobs:
       - name: Test with pytest + doctest 🧪
         run: |
           pip install pytest pytest-cov
+          python -m pytest -rA --doctest-modules --cov=.
+        continue-on-error: true
+
+        # TODO: Make the output more readable
+      - name: Test with pytest + doctest 🧪
+        run: |
+          pip install pytest pytest-cov
           python -m pytest -v -rA --doctest-modules --cov=.
+        continue-on-error: true
+
+      # TODO: Make the output more readable
+      - name: Test with pytest 🧪
+        run: |
+          pip install pytest pytest-cov
+          python -m pytest -rA --cov=.
         continue-on-error: true
 
       # TODO: Make the output more readable
