--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -47,24 +47,6 @@ jobs:
           pip install pytest pytest-cov
           python -m pytest -rA --cov=. # --doctest-modules
         continue-on-error: true
-
-      # TODO: Make the output more readable
-      - name: Test with pytest 🧪 with test
-        run: |
-          pip install pytest pytest-cov
-          python -m pytest test -rA --cov=. # --doctest-modules
-        continue-on-error: true
-
-      - name: Test with pytest
-        run: |
-          coverage run -m pytest  -v -s
-        continue-on-error: true
-
-      - name: Test with pytest
-        run: |
-          coverage run -m pytest test -v -s
-        continue-on-error: true
-
       - name: Upload coverage to Codecov 📊
         uses: codecov/codecov-action@v4
         with:
@@ -82,9 +64,19 @@ jobs:
         uses: pavelzw/pytest-action@v2
         with:
           custom-arguments: "--cov=."
+        continue-on-error: true
 
       - name: Run pytest @pavelzw no cov
         uses: pavelzw/pytest-action@v2
+        continue-on-error: true
+
+      - name: Upload coverage to Codecov 📊 again
+        uses: codecov/codecov-action@v4
+        with:
+          # file: .coverage
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Pylance type checking ✅ @jakebailey
         uses: jakebailey/pyright-action@v2
