--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,25 @@ jobs:
           ruff check . --output-format=github # -v
         continue-on-error: true
 
+      - name: Install pytest-action dependencies 📥
+        run: |
+          pip install pytest-md
+          pip install pytest-emoji
+
+      - name: Run pytest 🧪 @pavelzw
+        uses: pavelzw/pytest-action@v2
+        with:
+          custom-arguments: "--cov=."
+        continue-on-error: true
+
+      - name: Upload coverage to Codecov 📊 again
+        uses: codecov/codecov-action@v4
+        with:
+          # file: .coverage
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
       - name: Install public interface package 📥
         run: |
           python -m pip install .
@@ -47,30 +66,8 @@ jobs:
           pip install pytest pytest-cov
           python -m pytest -rA --cov=. # --doctest-modules
         continue-on-error: true
+        
       - name: Upload coverage to Codecov 📊
-        uses: codecov/codecov-action@v4
-        with:
-          # file: .coverage
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Install pytest-action dependencies 📥
-        run: |
-          pip install pytest-md
-          pip install pytest-emoji
-
-      - name: Run pytest @pavelzw
-        uses: pavelzw/pytest-action@v2
-        with:
-          custom-arguments: "--cov=."
-        continue-on-error: true
-
-      - name: Run pytest @pavelzw no cov
-        uses: pavelzw/pytest-action@v2
-        continue-on-error: true
-
-      - name: Upload coverage to Codecov 📊 again
         uses: codecov/codecov-action@v4
         with:
           # file: .coverage
