--- a/.github/workflows/python-package_former copy.yml
+++ b/.github/workflows/python-package_former copy.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Run pytest 🧪 @pavelzw
         uses: pavelzw/pytest-action@v2
         with:
-          custom-arguments: "--cov=."
+          custom-arguments: "-v -rA --doctest-modules --cov=."
         continue-on-error: true
 
       - name: Pylance type checking ✅ @jakebailey
