--- a/.github/workflows/python-package_former copy 2.yml
+++ b/.github/workflows/python-package_former copy 2.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Build Package 📦
+name: Build Package former copy 2 📦
 
 on:
   push:
@@ -31,16 +31,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/dev.txt
 
-      - name: Lint with ruff 🧹
-        run: |
-          pip install ruff
-          ruff check . --output-format=github # -v
-        continue-on-error: true
-
       - name: Install pytest-action dependencies 📥
         run: |
-          pip install pytest-md
-          pip install pytest-emoji
+          pip install pytest-md pytest-emoji
 
       - name: Run pytest 🧪 @pavelzw
         uses: pavelzw/pytest-action@v2
@@ -48,40 +41,20 @@ jobs:
           custom-arguments: "--cov=."
         continue-on-error: true
 
-      - name: Upload coverage to Codecov 📊 again
-        uses: codecov/codecov-action@v4
-        with:
-          # file: .coverage
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Install public interface package 📥
+      - name: Lint with ruff 🧹
         run: |
-          python -m pip install .
+          pip install ruff
+          ruff check . --output-format=github # -v
+        continue-on-error: true
 
       # TODO: Make the output more readable
-      - name: Test with pytest 🧪
+      - name: Test with pytest + doctest 🧪
         run: |
           pip install pytest pytest-cov
-          python -m pytest -rA --cov=. --doctest-modules
+          python -m pytest -v -rA --doctest-modules --cov=.
         continue-on-error: true
 
       - name: Upload coverage to Codecov 📊
-        uses: codecov/codecov-action@v4
-        with:
-          # file: .coverage
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Run pytest 🧪 @pavelzw
-        uses: pavelzw/pytest-action@v2
-        with:
-          custom-arguments: "-rA --doctest-modules --cov=."
-        continue-on-error: true
-
-      - name: Upload coverage to Codecov 📊 again
         uses: codecov/codecov-action@v4
         with:
           # file: .coverage
@@ -97,6 +70,9 @@ jobs:
           # verbose: true
         continue-on-error: true
 
+      - name: Install public interface package 📥
+        run: |
+          python -m pip install .
       - name: Verify public API types with Pylance ✅ @jakebailey
         uses: jakebailey/pyright-action@v2
         with:
