--- a/.github/workflows/python-package copy.yml
+++ b/.github/workflows/python-package copy.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Build Package former copy 2 📦
+name: Build Package 📦
 
 on:
   push:
@@ -31,30 +31,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/dev.txt
 
-      - name: Install pytest-action dependencies 📥
-        run: |
-          pip install pytest-md pytest-emoji
-
-      - name: Run pytest 🧪 @pavelzw
-        uses: pavelzw/pytest-action@v2
-        with:
-          custom-arguments: "--cov=."
-        continue-on-error: true
-
       - name: Lint with ruff 🧹
         run: |
           pip install ruff
           ruff check . --output-format=github # -v
         continue-on-error: true
 
-      # TODO: Make the output more readable
-      - name: Test with pytest + doctest 🧪
+      - name: Install pytest-action dependencies 📥
         run: |
-          pip install pytest pytest-cov
-          python -m pytest -v -rA --doctest-modules --cov=.
+          pip install pytest-md
+          pip install pytest-emoji
+      - name: Run pytest 🧪 @pavelzw
+        uses: pavelzw/pytest-action@v2
+        with:
+          custom-arguments: "-rA --doctest-modules --cov=."
         continue-on-error: true
 
-      - name: Upload coverage to Codecov 📊
+      - name: Upload coverage to Codecov 📊 again
         uses: codecov/codecov-action@v4
         with:
           # file: .coverage
