--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,10 +31,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/dev.txt
 
-      - name: Lint with ruff 🧹
-        run: |
-          pip install ruff
-          ruff check . --output-format=github # -v
+      - name: Lint with ruff 🧹 @chartboost
+        uses: chartboost/ruff-action@v1
         continue-on-error: true
 
       - name: Install pytest-action dependencies 📥
@@ -56,39 +54,6 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Install public interface package 📥
-        run: |
-          python -m pip install .
-
-      # TODO: Make the output more readable
-      - name: Test with pytest 🧪
-        run: |
-          pip install pytest pytest-cov
-          python -m pytest -rA --cov=. --doctest-modules
-        continue-on-error: true
-
-      - name: Upload coverage to Codecov 📊
-        uses: codecov/codecov-action@v4
-        with:
-          # file: .coverage
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Run pytest 🧪 @pavelzw
-        uses: pavelzw/pytest-action@v2
-        with:
-          custom-arguments: "-rA --doctest-modules --cov=."
-        continue-on-error: true
-
-      - name: Upload coverage to Codecov 📊 again
-        uses: codecov/codecov-action@v4
-        with:
-          # file: .coverage
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
       - name: Pylance type checking ✅ @jakebailey
         uses: jakebailey/pyright-action@v2
         with:
@@ -96,6 +61,10 @@ jobs:
           stats: true
           # verbose: true
         continue-on-error: true
+
+      - name: Install public interface package 📥
+        run: |
+          python -m pip install .
 
       - name: Verify public API types with Pylance ✅ @jakebailey
         uses: jakebailey/pyright-action@v2
