--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/dev.txt
 
-      - name: Lint with ruff 🧹 @chartboost
+      - name: Lint with ruff @chartboost 🧹
         uses: chartboost/ruff-action@v1
         continue-on-error: true
 
@@ -40,13 +40,13 @@ jobs:
           pip install pytest-md
           pip install pytest-emoji
 
-      - name: Run pytest 🧪 @pavelzw
+      - name: Run pytest @pavelzw 🧪
         uses: pavelzw/pytest-action@v2
         with:
           custom-arguments: "-rA --doctest-modules --cov=."
         continue-on-error: true
 
-      - name: Upload coverage to Codecov 📊 again
+      - name: Upload coverage to Codecov 📊
         uses: codecov/codecov-action@v4
         with:
           # file: .coverage
@@ -54,7 +54,7 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Pylance type checking ✅ @jakebailey
+      - name: Pylance type checking @jakebailey ✅
         uses: jakebailey/pyright-action@v2
         with:
           pylance-version: latest-release
@@ -66,7 +66,7 @@ jobs:
         run: |
           python -m pip install .
 
-      - name: Verify public API types with Pylance ✅ @jakebailey
+      - name: Verify public API types with Pylance @jakebailey ✅
         uses: jakebailey/pyright-action@v2
         with:
           pylance-version: latest-release
