--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "rl_ai2thor"
 version = "0.4.2"
 description = "RL environment for AI2-THOR"
 readme = "README.md"
-license = "MIT" # TODO: Check this
+license = "MIT"
 requires-python = ">=3.12"
 keywords = [
   "artificial intelligence",
@@ -31,21 +31,21 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 
-[project.optional-dependencies]
-# TODO: Update this
-graph = [
-  "networkx",
-  "matplotlib",
-  # pygraphviz, # https://pygraphviz.github.io/documentation/stable/install.html
-]
-dev = ["pytest", "beautifsoup4"]
+  [project.optional-dependencies]
+  # TODO: Update this
+  graph = [
+    "networkx",
+    "matplotlib",
+    # pygraphviz, # https://pygraphviz.github.io/documentation/stable/install.html
+  ]
+  dev = ["pytest", "beautifsoup4"]
 
-[project.urls] # TODO: Add these
-Homepage = "https://example.com"
-Documentation = "https://readthedocs.org"
-Repository = "https://github.com/me/spam.git"
-Issues = "https://github.com/me/spam/issues"
-Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
+  [project.urls] # TODO: Add these
+  Homepage = "https://example.com"
+  Documentation = "https://readthedocs.org"
+  Repository = "https://github.com/me/spam.git"
+  Issues = "https://github.com/me/spam/issues"
+  Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/rl_ai2thor"]
@@ -58,108 +58,108 @@ src = ["src"]
 # In addition to the standard set, include `.ipynb` files.
 extend-include = ["*.ipynb"]
 
-[tool.ruff.lint]
-preview = true
-fixable = ["ALL"]
-select = [
-  "RUF",  # Ruff specific rules
-  "PL",   # Pylint
-  "B",    # Bugbear
-  "D",    # Docstring
-  "D213", # Multi-line docstring summary should start at the second line
-  "D401", # First line should be in imperative mood
-  "D404", # First line should not start with this
-  "I",    # Isort
-  "C90",  # Mccabe complexity
-  "UP",   # PyUpgrade 
-  "ANN",  # Type annotations
-  "S",    # Bandit
-  "A",    # flake8-builtins
-  "C4",   # flake8-comprehensions
-  "FA",   # flake8-future-annotations
-  "ISC",  # flake8-implicit-str-concat
-  "ICN",  # flake8-import-conventions
-  "G",    # flake8-logging-format
-  "LOG",  # flake8-logging
-  "PIE",  # flake8-pie
-  "PT",   # flake8-pytest-style
-  "RET",  # flake8-return
-  "SLF",  # flake8-self
-  "SIM",  # flake8-simplify
-  "TID",  # flake8-tidy-imports
-  "TCH",  # flake8-type-checking
-  "ARG",  # flake8-unused-arguments
-  "PTH",  # flake8-use-pathlib
-  "TD",   # flake8-todos
-  "ERA",  # flake8-eradicate
-  "TRY",  # tryceratops
-  "NPY",  # numpy specefic rules
-  "PERF", # Perflint
-  "FURB", # refurb
-  # "WPS",  # wemake-python-styleguide -> Not yet supported
+  [tool.ruff.lint]
+  preview = true
+  fixable = ["ALL"]
+  select = [
+    "RUF",  # Ruff specific rules
+    "PL",   # Pylint
+    "B",    # Bugbear
+    "D",    # Docstring
+    "D213", # Multi-line docstring summary should start at the second line
+    "D401", # First line should be in imperative mood
+    "D404", # First line should not start with this
+    "I",    # Isort
+    "C90",  # Mccabe complexity
+    "UP",   # PyUpgrade 
+    "ANN",  # Type annotations
+    "S",    # Bandit
+    "A",    # flake8-builtins
+    "C4",   # flake8-comprehensions
+    "FA",   # flake8-future-annotations
+    "ISC",  # flake8-implicit-str-concat
+    "ICN",  # flake8-import-conventions
+    "G",    # flake8-logging-format
+    "LOG",  # flake8-logging
+    "PIE",  # flake8-pie
+    "PT",   # flake8-pytest-style
+    "RET",  # flake8-return
+    "SLF",  # flake8-self
+    "SIM",  # flake8-simplify
+    "TID",  # flake8-tidy-imports
+    "TCH",  # flake8-type-checking
+    "ARG",  # flake8-unused-arguments
+    "PTH",  # flake8-use-pathlib
+    "TD",   # flake8-todos
+    "ERA",  # flake8-eradicate
+    "TRY",  # tryceratops
+    "NPY",  # numpy specefic rules
+    "PERF", # Perflint
+    "FURB", # refurb
+    # "WPS",  # wemake-python-styleguide -> Not yet supported
 
-]
-ignore = [
-  "D105",   # Missing docstring in magic method
-  "D107",   # Missing docstring in `__init__`
-  "D212",   # Multi-line docstring summary should start at the first line
-  "TD002",  # Missing author in TODO; try: `TODO(<author_name>): ...` or `TODO @<author_name>: ...`
-  "TD003",  # Missing issue link on the line following this TODO
-  "TD004",  # Missing colon after TODO
-  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in
+  ]
+  ignore = [
+    "D105",   # Missing docstring in magic method
+    "D107",   # Missing docstring in `__init__`
+    "D212",   # Multi-line docstring summary should start at the first line
+    "TD002",  # Missing author in TODO; try: `TODO(<author_name>): ...` or `TODO @<author_name>: ...`
+    "TD003",  # Missing issue link on the line following this TODO
+    "TD004",  # Missing colon after TODO
+    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in
 
-  # TODO: Comment out for produciton release
-  "ERA001", # Found commented-out code
-  "S101",   # Use of `assert` detected
-  "RET504", # Unnecessary assignment to `...` before `return` statement
-]
+    # TODO: Comment out for produciton release
+    "ERA001", # Found commented-out code
+    "S101",   # Use of `assert` detected
+    "RET504", # Unnecessary assignment to `...` before `return` statement
+  ]
 
-[tool.ruff.lint.per-file-ignores]
-"tests/*" = [
-  "SLF001", # Private member accessed: `self._foo`
-  "D100",   # Missing docstring in public module
-  "D101",   # Missing docstring in public class
-  "D102",   # Missing docstring in public method
-  "D103",   # Missing docstring in public function
-  "ANN",
-]
+    [tool.ruff.lint.per-file-ignores]
+    "tests/*" = [
+      "SLF001", # Private member accessed: `self._foo`
+      "D100",   # Missing docstring in public module
+      "D101",   # Missing docstring in public class
+      "D102",   # Missing docstring in public method
+      "D103",   # Missing docstring in public function
+      "ANN",
+    ]
 
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-[tool.ruff.lint.pylint]
-max-args = 6
+    [tool.ruff.lint.pydocstyle]
+    convention = "google"
+    [tool.ruff.lint.pylint]
+    max-args = 6
 [tool.ruff.format]
 preview = true
 docstring-code-format = true
 
 # == Pytest == #
 [tool.pytest] # https://docs.pytest.org/en/stable/customize.html
-[tool.pytest.ini_options]
-markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
+  [tool.pytest.ini_options]
+  markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
 
-# testpaths = ["tests"]
-pythonpath = ["src"]
+  # testpaths = ["tests"]
+  pythonpath = ["src"]
 
-# == Coverage == #
-[tool.coverage.report]
-exclude_also = [
-  "def __repr__",
-  "def __str__",
-  "if TYPE_CHECKING:",
-  # "if __name__ == '__main__':",
+  # == Coverage == #
+  [tool.coverage.report]
+  exclude_also = [
+    "def __repr__",
+    "def __str__",
+    "if TYPE_CHECKING:",
+    # "if __name__ == '__main__':",
 
-  # Don't complain about missing debug-only code:
-  # "if self\\.debug",
-  # "if settings.DEBUG",
+    # Don't complain about missing debug-only code:
+    # "if self\\.debug",
+    # "if settings.DEBUG",
 
-  # Don't complain if tests don't hit defensive assertion code:
-  "raise AssertionError",
-  "raise NotImplementedError",
+    # Don't complain if tests don't hit defensive assertion code:
+    "raise AssertionError",
+    "raise NotImplementedError",
 
-  # Don't complain if non-runnable code isn't run:
-  "if 0:",
-  "if __name__ == .__main__.:",
+    # Don't complain if non-runnable code isn't run:
+    "if 0:",
+    "if __name__ == .__main__.:",
 
-  # Don't complain about abstract methods, they aren't run:
-  "@(abc\\.)?abstractmethod",
-]
+    # Don't complain about abstract methods, they aren't run:
+    "@(abc\\.)?abstractmethod",
+  ]
