--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rl_ai2thor"
-version = "0.6.1"
+version = "0.6.2"
 description = "RL environment for AI2-THOR"
 readme = "README.md"
 license = "MIT"
@@ -34,11 +34,7 @@ classifiers = [
     "matplotlib",
     # pygraphviz, # https://pygraphviz.github.io/documentation/stable/install.html
   ]
-  dev = [
-    "pytest",
-    "beautifsoup4",
-    #  "garage" 
-  ]
+  dev = ["pytest", "beautifsoup4"]
 
   [project.urls] # TODO: Add these
   Homepage = "https://example.com"
