--- a/config/environment_config.yaml
+++ b/config/environment_config.yaml
@@ -61,15 +61,9 @@ tasks:
   task_blueprints:
     - task_type: PlaceIn
       args:
-        placed_object_type: Apple
+        placed_object_type: Mug
         receptacle_type: CounterTop
       scenes: &ALL_SCENES [Kitchen, LivingRoom, Bedroom, Bathroom] # List of scene names to use for the task (e.g. scene groups: "Kitchen", "LivingRoom", "Bedroom", "Bathroom" or full names like "FloorPlan1", "FloorPlan201", ...)
-    - task_type: PlaceNSameIn
-      args:
-        n: 1
-        placed_object_type: Apple
-        receptacle_type: CounterTop
-      scenes: *ALL_SCENES
     - task_type: PlaceWithMoveableRecepIn
       args:
         placed_object_type: Apple
