Update last tasks

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,10 @@ docker/ai2thor_simulator_resources/
 ## Dev files
 old/
 rl_thor_1
+runs*/
+rl_thor
+weird_runs/
+examples/benchmark/script/
 
 ## Test files
 debug_test.py
